XMLExper/m12/m12_543_1_tinyxml2/comparisonS.txt
tinyxml2.cpp: In member function ‘tinyxml2::XMLUnknown* tinyxml2::XMLDocument::NewUnknown(const char*)’:
tinyxml2.cpp:2320:52: error: invalid conversion from ‘tinyxml2::XMLNode*’ to ‘tinyxml2::XMLUnknown*’ [-fpermissive]
 2320 |     return /*PCI*/dynamic_cast<tinyxml2::XMLNode*>(unk);
      |                                                    ^~~
      |                                                    |
      |                                                    tinyxml2::XMLNode*
diff: tinyxml2.S: No such file or directory
